--- a/总结.md
+++ b/总结.md
@@ -257,25 +257,22 @@ https://juejin.cn/post/6844903989096497159
 ### 网络
 
 ```
-1. 构建请求
-GET / HTTP/1.1
+1. 解析URL：分析URL中的协议、域名、端口、非法字符等
 
-2. 查找强缓存
-先检查强缓存，如果命中直接使用，否则进入下一步。
+2. 判断缓存：浏览器会判断请求的资源是否在缓存中，如果在就直接用，不在就发新请求
 
-3. DNS解析
-由于我们输入的是域名，而数据包是通过IP地址传给对方的。因此我们需要得到域名对应的IP地址。这个过程需要依赖一个服务系统，这个系统将域名和 IP 一一映射，我们将这个系统就叫做DNS（域名系统）。得到具体 IP 的过程就是DNS解析。
-当然，值得注意的是，浏览器提供了DNS数据缓存功能。即如果一个域名已经解析过，那会把解析的结果缓存下来，下次处理直接走缓存，不需要经过 DNS解析。
-另外，如果不指定端口的话，默认采用对应的 IP 的 80 端口。
+3. DNS解析：获取URL中域名的IP地址，用户向本地发起递归请求，本地hosts -> 本地DNS服务器（如果还是没有，则向上级域名服务器发起迭代请求） -> 根域名服务器 -> 顶级域名服务器 -> 权威域名服务器，获取到之后，本地DNS服务器将IP返回给用户。
 
-4. 建立 TCP 连接
-这里要提醒一点，Chrome 在同一个域名下要求同时最多只能有 6 个 TCP 连接，超过 6 个的话剩下的请求就得等待。
+4. 根据IP建立TCP连接（三次握手）：1. 客户端向服务器发送SYN连接请求报文段和一个随机序号。2. 服务器向客户端发送SYN+ACK报文段和一个随机序号，确认连接请求。3. 客户端收到确认请求后，向服务器发送一个ACK确认报文段，表示接收到服务器的确认请求，此时连接建立。
 
-5. 发送 HTTP 请求
-6. 服务器响应
+5. HTTP请求。
+
+6. 服务器处理，浏览器接收响应。
+
+7. 解析响应，渲染页面：构建DOM树，CSSOM树，判断script标签属性，通过DOM和CSSOM树构建渲染树来布局，浏览器根据页面布局进行绘制。
+
+8. 关闭TCP连接（四次挥手）：1. 当浏览器认为数据发送完毕后，会向服务器发送释放连接请求，客户端进入FIN-WAIT-1状态。2. 服务器收到请求后，会向客户端发送ACK包，表明要释放TCP连接，并进入CLOSE_WAIT状态，表明客户端到服务端的连接已经释放，不再接收客户端发的数据了，但是服务器仍然能够发送数据到客户端，此时客户端进入FIN-WAIT-2状态，等待服务端发送数据。3.如果服务端还有数据没发送完则会继续发送，完毕后向客户端发送释放连接请求，并进入LAST-ACK状态，等待客户端的确认。4. 客户端收到服务端的释放连接请求后，需要发出确认请求，服务端收到请求后进入CLOSED状态，此时，客户端进入TIME-WAIT状态，持续2MSL（最长报文段寿命）后，客户端进入CLOSED状态，关闭TCP连接。
 ```
-
-
 
 ### 渲染
 
@@ -839,64 +836,79 @@ Person { name: 'txf', age: '18' }
 ### 3.6.1 原型链继承
 
 ```js
-function Super(){
-	this.name = 'txf'
-	this.age = 18
+// 存在的问题：
+// 1. 引用类型的属性被所有实例共享
+// 2. 在创建Child的实例时，不能向Parent传参
+function Parent () {
+    this.names = ['kevin', 'daisy'];
 }
-Super.prototype.sayName = function(){
-	console.log('111')
+
+function Child () {
+
 }
-function Sub(){
-	this.height = 188
-}
-Sub.prototype = new Super()
-Sub.prototype.constructor = Sub
-let p1 = new Sub()
-console.log(p1.name)
-console.log(p1.age)
-p1.sayName()
-console.log(p1)
+
+Child.prototype = new Parent();
+
+var child1 = new Child();
+
+child1.names.push('yayu');
+
+console.log(child1.names); // ["kevin", "daisy", "yayu"]
+
+var child2 = new Child();
+
+console.log(child2.names); // ["kevin", "daisy", "yayu"]
 ```
 
 ### 3.6.2 构造函数继承
 
 ```js
-function Super(){
-  this.name = 'txf'
-  this.age = 18
-  this.arr = [1,2,3,4]
+// 优点：
+// 1.避免了引用类型的属性被所有实例共享
+// 2.可以在 Child 中向 Parent 传参
+
+// 缺点：
+// 1. 父类的原型方法不会被子类继承，而是必须在构造函数中定义，每次创建实例都会创建一遍方法，无法做到方法共用。
+function Parent(name) {
+    this.name = name
+    this.sayHello = function() {
+        console.log('hello')
+    }
 }
-function Sub(id){
-  this.id = id
-  Super.call(this)
+function Child(name, age){
+    Parent.call(this, name)
+    this.age = age
 }
-let p = new Sub(196)
-let p2 = new Sub(197)
-console.log(p.name)
-p.arr.push(5)
-console.log(p.arr);
-console.log(p2.arr);
+// Parent.prototype.sayHello = function () {
+//   console.log('hello')
+// }
+const c1 = new Child('txf', 18)
+c1.sayHello()
+console.log(c1)
 ```
 
 ### 3.6.3 组合继承
 
 ```js
-function Super(name, age){
-	this.name = name
-	this.age = age
+// 融合原型链继承和构造函数的优点，是 JavaScript 中最常用的继承模式。
+function Parent(name) {
+    this.name = name
+    this.names = ['tt','xx','ff']
 }
-Super.prototype.sayName = function(){
-	console.log(this.name)
+function Child(name, age) {
+    Parent.call(this, name)
+    this.age = age
 }
-function Sub(name, age, height){
-  	Super.call(this, name, age)
-	this.height = height
+Parent.prototype.sayHello = function () {
+    console.log('我是Parent原型上的方法')
 }
-Sub.prototype = new Super()
-Sub.prototype.constructor = Sub
-let p1 = new Sub('txf',18,188)
-p1.sayName()
-console.log(p1);
+Child.prototype = new Parent()
+Child.prototype.constructor = Child
+const c1 = new Child('txf', 23)
+c1.sayHello()
+const c2 = new Child('222txf', 24)
+c2.sayHello()
+console.log(c1, c2)
 ```
 
 ### 3.6.4 ES6类继承
@@ -933,7 +945,7 @@ s.showName()
 ### 3.7.1 定义
 
 ```
-JavaScript对象通过__proto__ 指向父类对象，直到指向Object对象为止，这样就形成了一个原型指向的链条, 即原型链。
+原型链就在查找属性时，不停向上查找对象的__proto__隐式原型而形成的，这样普通对象可以使用valueOf函数，因为Object上有ValueOf，Object的prototype在普通对象的__proto上。
 
 每一个JS函数中都有一个prototype（原型）属性，指向这个函数的原型对象，通过这个函数产生的实例对象都有一个__proto__（隐式原型）属性，这个属性也是指向同一个原型对象，所有的实例对象的属性都会继承这个原型对象的属性，原型对象上也有一个__proto__属性，指向的objec原型对象，所有的对象属性都会继承objec原型对象属性。而object原型对象的__proto__指向的是null。当我们访问对象的某个属性时，就会从实例对象，原型对象，object原型对象上层层寻找，由此形成原型链。而原型就是原型对象上的属性。
 ```
@@ -942,7 +954,7 @@ JavaScript对象通过__proto__ 指向父类对象，直到指向Object对象为
 规则:
 1.js中，每个对象都有隐式原型属性__proto__，而只有函数对象才有显示原型属性prototype
 2.Object,Function,Array等都是内置函数
-3.__proto__是个对象，它与其构造函数的显示原型对象只向同一个对象
+3.__proto__是个对象，它与其构造函数的显示原型对象指向同一个对象
 4.原型对象prototype有一个默认的constructor属性，指向函数对象本身，用来记录实例由哪个构造函数创建
 5.使用 in 检查对象中是否含有某个属性时，如果对象中没有但是原型链中有，也会返回 true
 ```
@@ -1014,8 +1026,6 @@ console.log('obj2',obj2)
 let arr = [1, 2, 3];
 let newArr = [...arr];//跟arr.slice()是一样的效果
 ```
-
-
 
 ### 3.8.2 深拷贝
 
@@ -2873,6 +2883,32 @@ for (var v of myObject) {
 }
 // 2
 // 3
+```
+
+## 3.17 JS执行上下文、变量对象、作用域链、this
+
+```
+当 JavaScript 代码执行一段可执行代码(executable code)时，会创建对应的执行上下文(execution context)，执行上下文有三种：
+1. 全局执行上下文
+2. 函数执行上下文
+3. eval
+
+执行上下文包含三个生命周期：创建阶段→执行阶段→回收阶段
+1.创建阶段
+
+当函数被调用，但未执行任何其内部代码之前，会做以下三件事：
+1）创建变量对象(Variable object，VO)：首先初始化函数的参数arguments，提升函数声明和变量声明。后文会详细说明。
+2）创建作用域链（Scope Chain）：在执行上下文的创建阶段，作用域链是在变量对象之后创建的。作用域链本身包含变量对象。作用域链用于解析变量。当被要求解析变量时，JavaScript 始终从代码嵌套的最内层开始，如果最内层没有找到变量，就会跳转到上一层父作用域中查找，直到找到该变量。后文会详细说明。
+3）确定this指向：包括多种情况，后文会详细说明。
+
+在一段 JS 脚本执行之前，要先解析代码（所以说 JS 是解释执行的脚本语言），解析的时候会先创建一个全局执行上下文环境，先把代码中即将执行的变量、函数声明都拿出来。变量先暂时赋值为undefined，函数则先声明好可使用。这一步做完了，然后再开始正式执行程序。
+另外，一个函数在被执行之前，也会创建一个函数执行上下文环境，跟全局上下文差不多，不过函数执行上下文中会多出this arguments和函数的参数。
+
+2.执行阶段
+进入执行上下文、执行代码
+
+3.回收阶段
+执行完毕后执行上下文出栈等待垃圾回收
 ```
 
 
